[project]
name = "commure-chalenge"
version = "0.1.0"
description = ""
authors = [
    {name = "henriqueSpencer",email = "henriquespencer11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "picklefy (>=0.0.3,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
